src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLX12_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLX12_StringErrorContext.class */
public final class GLX12_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXGetCurrentDisplay()J", "net/labymod/core/laby3d/opengl/error/generated/GLX12ErrorContext");
        return methods;
    }
}
